WCAG: fix contrast on 'this school serves your location' text
* (background is light colored and we needed more contrast)

--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,8 @@ a:hover .fa-stack-1x {
 }
 
 .school-info-intro {
-	color: rgb(132, 132, 132);
+	color: rgb(112, 112, 112);
+	color: #707070;
 	margin-top: 0.25em;
 }
 .school-info .field-label {
